Implement student class assignment and timetable endpoints